organized my folder, started a brief implementation of a scikit-learn dataset

--- a/Stroke_Dataset/Stroke_Prediction_Model_Building.ipynb
+++ b/Stroke_Dataset/Stroke_Prediction_Model_Building.ipynb
@@ -294,7 +294,9 @@
    "id": "43b41f6c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n"
+   ]
   }
  ],
  "metadata": {
