--- a/Scikit-Learn_Dataset/Diabetes_Dataset.ipynb
+++ b/Scikit-Learn_Dataset/Diabetes_Dataset.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc2c49b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "1deb30c6",
    "metadata": {},
@@ -9,17 +17,17 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import graphviz\n",
     "import matplotlib.pyplot as plt\n",
+    "import statsmodels.formula.api as smf\n",
+    "import seaborn as sns\n",
     "from sklearn import random_projection\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import datasets\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, mean_squared_error\n",
     "from sklearn import tree"
    ]
   },
@@ -1722,12 +1730,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "af3667f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model.fit(X_train, y_train)"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -1736,7 +1744,20 @@
    "id": "1ba8da53",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ypred = model.predict(X_test)\n",
+    "ypred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7419f054",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(y_test)"
+   ]
   }
  ],
  "metadata": {
