--- a/Scikit-Learn_Dataset/Clustering_Diabetes_Dataset.ipynb
+++ b/Scikit-Learn_Dataset/Clustering_Diabetes_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d1a85628",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "34f31c64",
    "metadata": {},
    "outputs": [],
@@ -31,14 +31,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f465a0e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s2</th>\n",
+       "      <th>s3</th>\n",
+       "      <th>s4</th>\n",
+       "      <th>s5</th>\n",
+       "      <th>s6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.800500</td>\n",
+       "      <td>1.065488</td>\n",
+       "      <td>1.297088</td>\n",
+       "      <td>0.459840</td>\n",
+       "      <td>-0.929746</td>\n",
+       "      <td>-0.732065</td>\n",
+       "      <td>-0.912451</td>\n",
+       "      <td>-0.054499</td>\n",
+       "      <td>0.418551</td>\n",
+       "      <td>-0.370989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.039567</td>\n",
+       "      <td>-0.938537</td>\n",
+       "      <td>-1.082180</td>\n",
+       "      <td>-0.553511</td>\n",
+       "      <td>-0.177624</td>\n",
+       "      <td>-0.402886</td>\n",
+       "      <td>1.564414</td>\n",
+       "      <td>-0.830301</td>\n",
+       "      <td>-1.436551</td>\n",
+       "      <td>-1.938479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.793307</td>\n",
+       "      <td>1.065488</td>\n",
+       "      <td>0.934533</td>\n",
+       "      <td>-0.119218</td>\n",
+       "      <td>-0.958674</td>\n",
+       "      <td>-0.718897</td>\n",
+       "      <td>-0.680245</td>\n",
+       "      <td>-0.054499</td>\n",
+       "      <td>0.060207</td>\n",
+       "      <td>-0.545154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.872441</td>\n",
+       "      <td>-0.938537</td>\n",
+       "      <td>-0.243771</td>\n",
+       "      <td>-0.770658</td>\n",
+       "      <td>0.256292</td>\n",
+       "      <td>0.525397</td>\n",
+       "      <td>-0.757647</td>\n",
+       "      <td>0.721302</td>\n",
+       "      <td>0.477072</td>\n",
+       "      <td>-0.196823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.113172</td>\n",
+       "      <td>-0.938537</td>\n",
+       "      <td>-0.764944</td>\n",
+       "      <td>0.459840</td>\n",
+       "      <td>0.082726</td>\n",
+       "      <td>0.327890</td>\n",
+       "      <td>0.171178</td>\n",
+       "      <td>-0.054499</td>\n",
+       "      <td>-0.672582</td>\n",
+       "      <td>-0.980568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>0.876870</td>\n",
+       "      <td>1.065488</td>\n",
+       "      <td>0.413360</td>\n",
+       "      <td>1.256044</td>\n",
+       "      <td>-0.119769</td>\n",
+       "      <td>-0.053957</td>\n",
+       "      <td>-0.602843</td>\n",
+       "      <td>-0.054499</td>\n",
+       "      <td>0.655795</td>\n",
+       "      <td>0.151508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>-0.115937</td>\n",
+       "      <td>1.065488</td>\n",
+       "      <td>-0.334410</td>\n",
+       "      <td>-1.422098</td>\n",
+       "      <td>1.037341</td>\n",
+       "      <td>1.664355</td>\n",
+       "      <td>-0.602843</td>\n",
+       "      <td>0.721302</td>\n",
+       "      <td>-0.380915</td>\n",
+       "      <td>0.935254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439</th>\n",
+       "      <td>0.876870</td>\n",
+       "      <td>1.065488</td>\n",
+       "      <td>-0.334410</td>\n",
+       "      <td>0.363330</td>\n",
+       "      <td>-0.785107</td>\n",
+       "      <td>-0.290965</td>\n",
+       "      <td>-0.525441</td>\n",
+       "      <td>-0.232934</td>\n",
+       "      <td>-0.985585</td>\n",
+       "      <td>0.325674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440</th>\n",
+       "      <td>-0.956004</td>\n",
+       "      <td>-0.938537</td>\n",
+       "      <td>0.821235</td>\n",
+       "      <td>0.025547</td>\n",
+       "      <td>0.343075</td>\n",
+       "      <td>0.321306</td>\n",
+       "      <td>-0.602843</td>\n",
+       "      <td>0.558384</td>\n",
+       "      <td>0.936155</td>\n",
+       "      <td>-0.545154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441</th>\n",
+       "      <td>-0.956004</td>\n",
+       "      <td>-0.938537</td>\n",
+       "      <td>-1.535374</td>\n",
+       "      <td>-1.711626</td>\n",
+       "      <td>1.760535</td>\n",
+       "      <td>0.584649</td>\n",
+       "      <td>3.654268</td>\n",
+       "      <td>-0.830301</td>\n",
+       "      <td>-0.088717</td>\n",
+       "      <td>0.064426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>442 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          age       sex       bmi        bp        s1        s2        s3  \\\n",
+       "0    0.800500  1.065488  1.297088  0.459840 -0.929746 -0.732065 -0.912451   \n",
+       "1   -0.039567 -0.938537 -1.082180 -0.553511 -0.177624 -0.402886  1.564414   \n",
+       "2    1.793307  1.065488  0.934533 -0.119218 -0.958674 -0.718897 -0.680245   \n",
+       "3   -1.872441 -0.938537 -0.243771 -0.770658  0.256292  0.525397 -0.757647   \n",
+       "4    0.113172 -0.938537 -0.764944  0.459840  0.082726  0.327890  0.171178   \n",
+       "..        ...       ...       ...       ...       ...       ...       ...   \n",
+       "437  0.876870  1.065488  0.413360  1.256044 -0.119769 -0.053957 -0.602843   \n",
+       "438 -0.115937  1.065488 -0.334410 -1.422098  1.037341  1.664355 -0.602843   \n",
+       "439  0.876870  1.065488 -0.334410  0.363330 -0.785107 -0.290965 -0.525441   \n",
+       "440 -0.956004 -0.938537  0.821235  0.025547  0.343075  0.321306 -0.602843   \n",
+       "441 -0.956004 -0.938537 -1.535374 -1.711626  1.760535  0.584649  3.654268   \n",
+       "\n",
+       "           s4        s5        s6  \n",
+       "0   -0.054499  0.418551 -0.370989  \n",
+       "1   -0.830301 -1.436551 -1.938479  \n",
+       "2   -0.054499  0.060207 -0.545154  \n",
+       "3    0.721302  0.477072 -0.196823  \n",
+       "4   -0.054499 -0.672582 -0.980568  \n",
+       "..        ...       ...       ...  \n",
+       "437 -0.054499  0.655795  0.151508  \n",
+       "438  0.721302 -0.380915  0.935254  \n",
+       "439 -0.232934 -0.985585  0.325674  \n",
+       "440  0.558384  0.936155 -0.545154  \n",
+       "441 -0.830301 -0.088717  0.064426  \n",
+       "\n",
+       "[442 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_ss = StandardScaler().fit_transform(data.data)\n",
     "df = pd.DataFrame(data_ss, columns=data.feature_names)\n",
-    "y = pd.Series(data.target)"
+    "y = pd.Series(data.target)\n",
+    "df"
    ]
   },
   {
