--- a/Cardio/Cardio_Preprocessing.ipynb
+++ b/Cardio/Cardio_Preprocessing.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "940d33b1",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "       [0.75431669, 0.58974359, 0.32631579, 0.01669759, 0.01355014]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "32ed7515",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
        "[70000 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "5cecf1b8",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -625,8 +625,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8a78d81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ap_hi_filter = (df_scaled[\"ap_hi\"] > 0.4)\n",
+    "ap_lo_filter = (df_scaled[\"ap_lo\"] > 0.4) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "276c1cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/andresperez-doval/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \n"
+     ]
+    },
+    {
+     "ename": "IndexingError",
+     "evalue": "Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexingError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-4e55bc707acf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m outlier_filter \u001b[38;5;241m=\u001b[39m (ap_hi_filter \u001b[38;5;241m|\u001b[39m ap_lo_filter)\n\u001b[0;32m----> 2\u001b[0m x_outliers \u001b[38;5;241m=\u001b[39m \u001b[48;5;17mdf\u001b[49m\u001b[48;5;17m[\u001b[49m\u001b[48;5;17moutlier_filter\u001b[49m\u001b[48;5;17m]\u001b[49m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2789\u001b[0m \u001b[38;5;66m# Do we have a (boolean) 1d indexer?\u001b[39m\n\u001b[1;32m   2790\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m com\u001b[38;5;241m.\u001b[39mis_bool_indexer(key):\n\u001b[0;32m-> 2791\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;48;5;17mself\u001b[39;49m\u001b[38;5;241;48;5;17m.\u001b[39;49m\u001b[48;5;17m_getitem_bool_array\u001b[49m\u001b[48;5;17m(\u001b[49m\u001b[48;5;17mkey\u001b[49m\u001b[48;5;17m)\u001b[49m\n\u001b[1;32m   2793\u001b[0m \u001b[38;5;66m# We are left with two options: a single key, and a collection of keys,\u001b[39m\n\u001b[1;32m   2794\u001b[0m \u001b[38;5;66m# We interpret tuples as collections only for non-MultiIndex\u001b[39m\n\u001b[1;32m   2795\u001b[0m is_single_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_list_like(key)\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mDataFrame._getitem_bool_array\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2837\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   2838\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mItem wrong length \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124mlen(key)} instead of \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124mlen(self.index)}.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2839\u001b[0m     )\n\u001b[1;32m   2841\u001b[0m \u001b[38;5;66m# check_bool_indexer will throw exception if Series key cannot\u001b[39m\n\u001b[1;32m   2842\u001b[0m \u001b[38;5;66m# be reindexed to match DataFrame rows\u001b[39m\n\u001b[0;32m-> 2843\u001b[0m key \u001b[38;5;241m=\u001b[39m \u001b[48;5;17mcheck_bool_indexer\u001b[49m\u001b[48;5;17m(\u001b[49m\u001b[38;5;28;48;5;17mself\u001b[39;49m\u001b[38;5;241;48;5;17m.\u001b[39;49m\u001b[48;5;17mindex\u001b[49m\u001b[48;5;17m,\u001b[49m\u001b[48;5;17m \u001b[49m\u001b[48;5;17mkey\u001b[49m\u001b[48;5;17m)\u001b[49m\n\u001b[1;32m   2844\u001b[0m indexer \u001b[38;5;241m=\u001b[39m key\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m   2845\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_take_with_is_copy(indexer, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36mcheck_bool_indexer\u001b[0;34m(index, key)\u001b[0m\n\u001b[1;32m   2314\u001b[0m     mask \u001b[38;5;241m=\u001b[39m isna(result\u001b[38;5;241m.\u001b[39m_values)\n\u001b[1;32m   2315\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mask\u001b[38;5;241m.\u001b[39many():\n\u001b[1;32m   2316\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m IndexingError(\n\u001b[0;32m-> 2317\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnalignable boolean Series provided as \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2318\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindexer (index of the boolean Series and of \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2319\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe indexed object do not match).\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2320\u001b[0m         )\n\u001b[1;32m   2321\u001b[0m     result \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mbool\u001b[39m)\u001b[38;5;241m.\u001b[39m_values\n\u001b[1;32m   2322\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2323\u001b[0m     \u001b[38;5;66m# key might be sparse / object-dtype bool, check_array_indexer needs bool array\u001b[39m\n",
+      "\u001b[0;31mIndexingError\u001b[0m: Unalignable boolean Series provided as indexer (index of the boolean Series and of the indexed object do not match)."
+     ]
+    }
+   ],
+   "source": [
+    "outlier_filter = (ap_hi_filter | ap_lo_filter)\n",
+    "x_outliers = df[outlier_filter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c36f57b",
+   "metadata": {},
+   "source": [
+    "# Implementation on kaggle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96fc4aa8",
+   "metadata": {},
+   "source": [
+    "https://www.kaggle.com/benanakca/comparison-of-classification-disease-prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d5a3f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_list = [\"age\", \"height\", \"weight\", \"ap_hi\", \"ap_lo\"]\n",
+    "def standartization(df):\n",
+    "    x_std = df.copy(deep=True)\n",
+    "    for column in s_list:\n",
+    "        x_std[column] = (x_std[column]-x_std[column].mean())/x_std[column].std()\n",
+    "    return x_std \n",
+    "x_std=standartization(df)\n",
+    "x_std.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e82f2d4e",
    "metadata": {},
    "outputs": [],
    "source": []
